tests/functional/lang/parse-fail-undef-var.err.exp
error: undefined variable 'y'
       at /pwd/parse-fail-undef-var.nix:1:4:
            1| x: y
             |    ^
            2|
